ubacene relativne putanje za bootstrap 4

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     -->
 
   <!-- jQuery library -->
-  <script src="./bootstrap//jquery-331.js"></script>
+  <script src="./bootstrap/jquery-331.js"></script>
 
   <!-- Popper JS -->
   <script src="./bootstrap/pooper.js"></script>
